<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.rahul.pod.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/prim_color"
        tools:context=".LoginFragment">

        <ImageView
            android:id="@+id/dino_logo"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_marginTop="@dimen/margin_large"
            android:src="@drawable/ic_dino_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dino_logo_text"
            style="@style/headerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/logo_test"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dino_logo" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:elevation="12dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dino_logo_text">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_medium">

                    <TextView
                        style="@style/subHeaderTextBoldBlackStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/login_title" />

                    <ProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elevation="2dp"
                        android:padding="@dimen/margin_large"
                        app:makeVisible="@{viewModel.loginLoader}" />

                    <EditText
                        android:id="@+id/userName"
                        style="@style/titleTextBoldStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_text_height"
                        android:layout_marginTop="@dimen/margin_small"
                        android:background="@drawable/dark_green_border"
                        app:makeVisible="@{!viewModel.loginLoader}"
                        android:hint="@string/user_name_hint"
                        android:padding="@dimen/margin_x_small" />

                    <EditText
                        android:id="@+id/password"
                        style="@style/titleTextBoldStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_text_height"
                        android:layout_marginTop="@dimen/margin_small"
                        android:background="@drawable/dark_green_border"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        app:makeVisible="@{!viewModel.loginLoader}"
                        android:padding="@dimen/margin_x_small" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/loginButton"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_small"
                        app:makeVisible="@{!viewModel.loginLoader}"
                        android:text="@string/submit" />

                </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>