<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="logo_test">Dino App</string>
    <string name="login_title">Login</string>
    <string name="user_name_hint">UserName</string>
    <string name="password_hint">Password</string>
    <string name="submit">Submit</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="cat_title">Category</string>
    <string name="profile_title">Profile</string>
    <string name="notify_title">Notification</string>

    <string name="dashboard_stories">Stories</string>
    <string name="dashboard_all">All</string>
    <string name="dashboard_kids">Kids</string>
    <string name="dashboard_videos">Videos</string>
    <string name="dashboard_market_place">Market Place</string>
    <string name="dashboard_coupons">Coupons</string>

    <string name="dashboard_kids_stories">Kids Stories</string>
    <string name="dashboard_kids_market">Kids Market Place</string>
    <string name="notify">Notification</string>
    <string name="logout">Logout</string>
    <string name="login">Move To Login Page</string>
    <string name="login_error">Username or Password is incorrect. Please try login again.</string>
    <string name="error">Unexpected Error.</string>
    <string name="login_error_empty">Username or Password cannot be empty or less than 3 characters.</string>

    <string name="profile_name">Name</string>
    <string name="profile_phone">Phone No</string>
    <string name="profile_email">Email</string>
    <string name="profile_country">Country</string>


</resources>