<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.rahul.pod.dashboard.DashboardViewModel" />
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/prim_color"
    android:orientation="vertical"
    tools:context=".DashboardFragment">

    <com.rahul.dino.core.ui.CommonAppBar
        android:id="@+id/dashBoardAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent" />

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/dashboardRecyclerView"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       app:makeVisible="@{!viewModel.loader}" />

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:padding="@dimen/margin_large"
        app:makeVisible="@{viewModel.loader}" />

</LinearLayout>
</layout>